[project]
name = "monolib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sturla Njardarson", email = "sturlanjardarson@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "jax>=0.9.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "tqdm>=4.67.2",
]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
